// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Nearest\` widget renders correctly with soon items 1`] = `
<div
  className="ant-card ant-card-bordered"
>
  <div
    className="ant-card-head"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        Ваши отпуска на ближайщий год
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style={undefined}
  >
    <div
      className="ant-list ant-list-lg ant-list-split"
    >
      <div>
        <div
          className="ant-spin-nested-loading"
          style={null}
        >
          <div
            className="ant-spin-container"
          >
            <div
              className="ant-list-item"
            >
              <div
                className="ant-list-item-meta"
              >
                <div
                  className="ant-list-item-meta-content"
                >
                  <h4
                    className="ant-list-item-meta-title"
                  >
                    Сейчас
                  </h4>
                  <div
                    className="ant-list-item-meta-description"
                  >
                    <p>
                      Начало: 
                      01.01.2018
                      <br />
                      Конец: 
                      02.03.2018
                    </p>
                  </div>
                </div>
              </div>
              <ul
                className="ant-list-item-action"
              >
                <li>
                  <i
                    className="anticon anticon-edit"
                    onClick={[Function]}
                    style={undefined}
                  />
                </li>
              </ul>
            </div>
            <div
              className="ant-list-item"
            >
              <div
                className="ant-list-item-meta"
              >
                <div
                  className="ant-list-item-meta-content"
                >
                  <h4
                    className="ant-list-item-meta-title"
                  >
                    Через 293 дн.
                  </h4>
                  <div
                    className="ant-list-item-meta-description"
                  >
                    <p>
                      Начало: 
                      01.01.2019
                      <br />
                      Конец: 
                      02.03.2019
                    </p>
                  </div>
                </div>
              </div>
              <ul
                className="ant-list-item-action"
              >
                <li>
                  <i
                    className="anticon anticon-edit"
                    onClick={[Function]}
                    style={undefined}
                  />
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <ul
    className="ant-card-actions"
  >
    <li
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <span>
        <span
          onClick={[Function]}
        >
          Добавить
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`\`Nearest\` widget renders correctly without items 1`] = `
<div
  className="ant-card ant-card-bordered"
>
  <div
    className="ant-card-head"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        Ваши отпуска на ближайщий год
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style={undefined}
  >
    <p>
      Нет созданных отпусков
    </p>
  </div>
  <ul
    className="ant-card-actions"
  >
    <li
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <span>
        <span
          onClick={[Function]}
        >
          Добавить
        </span>
      </span>
    </li>
  </ul>
</div>
`;
